[package]
name = "ec_mpso"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { version = "4.0.0-pre.1", features = ["serde"] }
rand = "0.8"
subtle = "2.4"
bincode = "1.3"
sets_multisets = "0.4"
structopt = "0.3"
